@@ -8,6 +8,7 @@ Changelog as of November 28, 2011:
 * moved enqueued `comment-reply` call from 'header.php' to 'functions.php'
 * removed `get_page_number` function as no longer needed
 * added PHPDoc style documentation
+* removed 'category.php' template file as not used
 
 /**
  * Internet Browsers Reviewed
